
2020-11-27  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_command_line): early processing for -g and optimization
	  flags to allow their "grouped" options to be adjusted by single options
	  later on
	* cobc.c (process_command_line), flag.def: -g now implies the recently
	  added flags -fgen-c-line-directives and -fgen-c-labels

2020-11-25  Simon Sobisch <simonsobisch@gnu.org>

	* error.c, cobc.h, tree.h: diagnostic functions now return cb_warn_val to
	  provide the caller with the information about the type of diagnostic
	  raised (note: can be adjusted with -W /-Wno / -Werror and by "ignored");
	  use of cb_error_node for position tree in some wrapper functions (has no
	  source reference and is therefore always resolved by current line)
	* error.c, tree.h, typeck.c, parser.y: cb_note_x now implies listing
	  suppression, therefore made related functions static instead of exporting
	* error.c, tree.h: cb_word->error now specifies if the word reference
	  produced a warning or error
	* error.c (get_qualified_name): extracted from undefined_error and re-use
	* error.c (undefined_error, ambiguous_error): only raise these errors /
	  warnings once per word, solving FR #313 report undefined identifiers once

2020-11-25  Ron Norman <rjn@inglenet.com>

	* codegen.c: Additional work to enhance INITIALIZE

2020-11-23  Ron Norman <rjn@inglenet.com>

	* codegen.c: Generated code for INITIALIZE enhanced to emit progressive
	  'memcpy' to speed up the process
	  If size is not known until run time then emit call to cob_init_table

2020-11-21  Simon Sobisch <simonsobisch@gnu.org>

	* codgen.c (process_command_line): minor cleanup

2020-11-20  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (ppinput): fixed processing after "line not terminated"

2020-11-19  Simon Sobisch <simonsobisch@gnu.org>

	FR #53 TURN directive and -fno-ec=NAME/-fec=NAME - finish
	* cobc.c (turn_ec_for_table): correct handling for EC-ALL
	* cobc.c (cobc_turn_ec): handling EC-USER as PENDING